# CodecBench

./: .gitignore  README.md  index.html  package.json  tailwind.config.js
.github/workflows/: build.yml  release.yml
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: error.rs  lib.rs  main.rs  models.rs  state.rs
src-tauri/src/commands/: benchmark.rs  database.rs  export.rs  ffmpeg.rs  mod.rs  settings.rs  system.rs
src-tauri/src/db/: models.rs  queries.rs  schema.rs
src-tauri/src/services/: benchmark.rs  encoder.rs  ffmpeg.rs  metrics.rs  mod.rs  system.rs
src/components/layout/: Layout.tsx  Sidebar.tsx
src/hooks/: useBenchmark.tsx
src/lib/: events.ts  export.ts  tauri.ts
src/pages/: BenchmarkConfigPage.tsx  BenchmarkRunPage.tsx  ComparePage.tsx  HistoryPage.tsx  QualityBenchmarkPage.tsx  ResultsPage.tsx  SetupPage.tsx  TrendsPage.tsx  VideoComparePage.tsx
src/styles/: global.css
src/types/: index.ts
src/utils/: colors.ts  format.ts
